--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,3 @@
----
-title: Gotwood
-timezone: UTC
-collections:
-  posts:
-    title: Posts
-    output: true
-  uploads:
-    title: Uploads
-    output: true
+markdown: kramdown
+baseurl: /morningwood
+exclude: ['README.md']
